# poietic

./: Cargo.toml  config.yaml
assets/admin/scripts/: poietic.js
assets/admin/styles/: poietic.css
src/: component.rs  config.rs  database.rs  error.rs  html.rs  lib.rs  main.rs  server.rs
src/component/: builtins.rs  component_dictionary.rs  render_error.rs
src/component/builtins/: basic_page.rs  component_list.rs  composition_builder.rs  heading.rs  link.rs  paragraph.rs  test.rs
src/config/: base_config.rs  database_config.rs  http_server_config.rs
src/database/: connection.rs  data_access.rs  database_error.rs  model.rs
src/database/connection/: connection_handle.rs  connection_manager.rs  test.rs
src/database/connection/connection_manager/: pooled.rs  test.rs  unpooled.rs
src/database/data_access/: composition.rs  page.rs  test.rs
src/html/: escape_html.rs  html_error.rs  html_node.rs  html_safety.rs  page_template.rs  text_node.rs
src/html/page_template/: page_template_config.rs  template.rs
src/server/: admin.rs  public.rs
src/server/admin/: api.rs  page.rs
src/server/admin/api/: create_composition.rs  create_page.rs
src/server/admin/page/: composition_builder.rs  index.rs  poietic.js
tests/: admin_api_endpoints.rs  page_route_handling.rs
