[package]
name = "poietic"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Duda", "Jan Marmucki", "Lech Mazur", "Adam Wasiak"]
license = "GPL-2.0"

[dependencies]
actix-web="4.5"
serde = { version="1.0", features = ["derive"]}
serde_yaml = "0.9"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
surrealdb = { version = "1.3.1", features = ["kv-rocksdb", "kv-mem"] }
chrono = "0.4.35"
